syntax = "proto3";

package varlog;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "varlog/metadata.proto";

option go_package = "github.daumkakao.com/varlog/varlog/proto/metadata_repository";

message ProposeRequest {
        uint64 epoch = 1;
        ProjectionDescriptor projection = 2;
}

message ProposeResponse {
        uint64 epoch = 1;
        ProjectionDescriptor projection = 2;
}

message GetRequest {
}

message GetResponse {
        ProjectionDescriptor projection = 1;
}

service MetadataRepositoryService {
        rpc Propose(ProposeRequest) returns (ProposeResponse) {}
        rpc Get(GetRequest) returns (GetResponse) {}
}
